--- a/index.html
+++ b/index.html
@@ -4,10 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>js-biglietto-treno-form</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     
+     <h1>Calcolo Prezzo Biglietto</h1>
 
+    <label for="nome">Nome del passeggero:</label>
+    <input type="text" id="nome" placeholder="Inserisci il nome" />
+
+    <label for="km">Numero di chilometri da percorrere:</label>
+    <input type="number" id="km" placeholder="Inserisci i chilometri" />
+
+    <label for="eta">Età del passeggero:</label>
+    <input type="number" id="eta" placeholder="Inserisci l'età" />
+
+    <button type="button" onclick="calcolaPrezzo()">Calcola Prezzo</button>
+
+<h2>Ecco qui il tuo biglietto</h2>
+
+<div id="risultato">
+    
+
+</div>
 
 
     <script src="./js/script.js" type="text/javascript"></script>
