--- a/index.html
+++ b/index.html
@@ -1,34 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>js-biglietto-treno-form</title>
+    <title>Calcolo Prezzo del Biglietto</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
-    
-     <h1>Calcolo Prezzo Biglietto</h1>
 
-    <label for="nome">Nome del passeggero:</label>
-    <input type="text" id="nome" placeholder="Inserisci il nome" />
+    <main>
 
-    <label for="km">Numero di chilometri da percorrere:</label>
-    <input type="number" id="km" placeholder="Inserisci i chilometri" />
-
-    <label for="eta">Età del passeggero:</label>
-    <input type="number" id="eta" placeholder="Inserisci l'età" />
-
-    <button type="button" onclick="calcolaPrezzo()">Calcola Prezzo</button>
-
-<h2>Ecco qui il tuo biglietto</h2>
-
-<div id="risultato">
-    
-
-</div>
+    <form>
+        <h1>Calcola Prezzo Biglietto</h1>
 
 
+        <label for="nome"><strong>Nome del passeggero:</strong></label>
+        <input type="text" id="nome" placeholder="Inserisci il nome" />
+
+        <label for="km"><strong>Numero di chilometri da percorrere:</strong></label>
+        <input type="number" id="km" placeholder="Inserisci i chilometri" />
+
+        <label for="eta"><strong>Età del passeggero:</strong></label>
+        <input type="number" id="eta" placeholder="Inserisci l'età" />
+
+        <button type="button" onclick="calcolaPrezzo()"><strong>Calcola Prezzo</strong></button>
+
+
+    </form>
+
+    <div id="risultato">
+
+        <h1 id="titoloRisultato">Ecco qui il tuo biglietto</h1>
+
+
+
+    </div>
+
+</main>
     <script src="./js/script.js" type="text/javascript"></script>
 </body>
+
 </html>
